[package]
name = "advent_of_code"
version = "0.11.0"
authors = ["Felix Spöttel <1682504+fspoettel@users.noreply.github.com>"]
edition = "2021"
default-run = "advent_of_code"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
doctest = false

[profile.dhat]
inherits = "release"
debug = 1

[features]
dhat-heap = ["dhat"]
today = []
test_lib = []
# chrono = ["dep:chrono"]

[dependencies]
anyhow = "1.0.86"
chrono = "0.4"

# Template dependencies
dhat = { version = "0.3.2", optional = true }
num-traits = "0.2.19"
pico-args = "0.5.0"
strum = { version = "0.26.3", features = ["derive"] }
tinyjson = "2.5.1"

# Solution dependencies
